[gd_scene load_steps=5 format=3 uid="uid://cl5q022xrjaci"]

[ext_resource type="Texture2D" uid="uid://w2fnqe7kakku" path="res://assets/sprites/player/caballero-spritesheet.png" id="1_caolw"]
[ext_resource type="Script" uid="uid://qwvo4fvdqw68" path="res://scenes/proyectiles/paladin/sword_base.gd" id="1_ex3xr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ex3xr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b8kfb"]
radius = 3.1622777

[node name="SwordBase" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ex3xr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ex3xr")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_caolw")
offset = Vector2(1, -0.5)
hframes = 6
vframes = 5
frame = 28

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_b8kfb")

[node name="Timer" type="Timer" parent="." groups=["PlayerBullet"]]
wait_time = 0.2
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
